--- a/views/friends.erb
+++ b/views/friends.erb
@@ -7,9 +7,15 @@
  </head>
  <body>
   <h1> My Super Cool Friends List </h1>
-
+  <% @friends.each do |friend| %>
+    <h2><%= friend %></h2>
+  <% end %>
   <!-- Iterate through the @friends array here to display each item in its own <h2> tag -->
-
+  <h2>Charlie Chaplin</h2>
+<h2>Richard Pryor</h2>
+<h2>Eddie Murphy</h2>
+<h2>Louis CK</h2>
+<h2>Jerry Seinfeld</h2>
 
  </body>
 </html>
