--- a/views/friends.erb
+++ b/views/friends.erb
@@ -10,6 +10,8 @@
 
   <!-- Iterate through the @friends array here to display each item in its own <h2> tag -->
 
-
+<%@memes.each do |meme|%>
+	<%=meme%>
+<%end%>
  </body>
 </html>
